--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- Company Promo Video -->
                 <div class="promo-video-container fade-in">
                     <video controls preload="metadata">
-                        <source src="video/mags.mp4" type="video/mp4">
+                        <source src="https://youtu.be/dvwqklf-SxU">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -113,7 +113,7 @@
                 <h2>See It In Action</h2>
                 <div class="video-wrapper">
                     <video controls preload="metadata">
-                        <source src="video/0330(1).mp4" type="video/mp4">
+                        <source src="https://youtu.be/wXbz78ixv0w">
                         Your browser does not support the video tag. Please <a href="video/0330(1).mp4">download the video</a> instead.
                     </video>
                 </div>
